* 1.0+beta3

- Print optional dependencies as optional in the output of =jbuilder
  external-lib-deps --missing=

- Added a few forms to the DSL:
  + =with-{stderr,outputs}-to=
  + =ignore-{stdout,stderr,outputs}=

- Added =${null}= which expands to =/dev/null= on Unix and =NUL= on
  Windows

- Improve the doc generated by =odoc= for wrapped libraries

- Fix a bug where =jbuilder= would crash when there was no
  =<package>.opam= file

- Fixed a bug where =.merlin= files where not generated at the root of
  the workspace

- Fix a bug where a =(glob_files ...)= would cause other dependencies
  to be ignored

- Fix the generated =ppx(...)= line in =META= files

* 1.0+beta2 (10/03/2017)

- Simplified the rules for finding the root of the workspace as the
  old ones were often picking up the home directory. New rules are:
  + look for a =jbuild-workspace= file in parent directories
  + look for a =jbuild-workspace*= file in parent directories
  + use the current directory

- Fixed the expansion of =${ROOT}= in actions

- Install =quick-start.org= in the documentation directory

- Add a few more things in the log file to help debugging

* 1.0+beta1 (07/03/2017)

- Added a manual

- Support incremental compilation

- Switched the CLI to cmdliner and added a =build= command
  (#5, Rudi Grinberg)

- Added a few commands:
  + =runtest=
  + =install=
  + =uninstall=
  + =installed-libraries=
  + =exec=: execute a command in an environment similar to what you
    would get after =jbuilder install=

- Removed the =build-package= command in favor of a =--only-packages=
  option that is common to all commands

- Automatically generate =.merlin= files
  (#2, Richard Davison)

- Improve the output of jbuilder, in particular don't mangle the
  output of commands when using =-j N= with =N > 1=

- Generate a log in =_build/log=

- Versioned the jbuild format and added a first stable version.
  You should now put =(jbuilder_version 1)= in a =jbuild= file at the