@@ -12,6 +12,9 @@
 
 - Improve the doc generated by =odoc= for wrapped libraries
 
+- Improve the error reported when an installed package depends on a
+  library that is not installed
+
 - Fix a bug where =jbuilder= would crash when there was no
   =<package>.opam= file
 
